# nart

./: .gitignore  .justfile  CMakeLists.txt  CMakePresets.json  NART.sln  README.md  nart.filters
NART/: NART.vcxproj  NART.vcxproj.filters  glassmaterial.cpp
NART/input/meshes/: bg.geo  monkeyFlat.geo  sphere.geo  teapot.geo  torus.geo
NART/input/scenes/: bunny.json  bunnyDragon.json  demo.json  dragon.json  dragonBunnyGlass.json  dragonTest.json  glassCaustics.json  ring.json  ringCaustics.json  scene.json  sphere.json  sphereGlass.json  sphereGlass2.json  sphereNew.json  sphereTest.json  veach.json  veachScene.json
NART/output/: output.exr
NART/src/: bvh.cpp  bvh.h  geometry.cpp  geometry.h  lights.cpp  lights.h  main.cpp  materials.cpp  materials.h  nart.h  reflection.h  render.cpp  render.h  sampling.cpp  sampling.h  scene.cpp  scene.h
NART/src/cameras/: pinholecamera.h
NART/src/core/: bvh.cpp  bvh.h  camera.h  geometry.cpp  geometry.h  light.h  main.cpp  material.h  reflection.cpp  reflection.h  render.cpp  render.h  rng.h  sampling.cpp  sampling.h  scene.cpp  scene.h
NART/src/lights/: disklight.cpp  disklight.h  distantlight.cpp  distantlight.h  ringlight.cpp  ringlight.h
NART/src/materials/: diffusematerial.cpp  diffusematerial.h  glassmaterial.h  glossydielectricmaterial.cpp  glossydielectricmaterial.h  plasticmaterial.cpp  plasticmaterial.h  speculardielectricmaterial.cpp  speculardielectricmaterial.h  specularmaterial.cpp  specularmaterial.h
include/nart/bxdfs/: dielectricbrdf.h  lambertbrdf.h  specularbrdf.h  speculardielectricbrdf.h  torrancesparrowbrdf.h
include/nart/cameras/: pinholecamera.h
include/nart/core/: bvh.h  bxdf.h  camera.h  geometry.h  integrator.h  light.h  material.h  media.h  memory.h  nart.h  pattern.h  render.h  rng.h  sampling.h  scene.h  util.h
include/nart/integrators/: pathintegrator.h  volumeintegrator.h
include/nart/lights/: disklight.h  distantlight.h  environmentlight.h  ringlight.h
include/nart/materials/: diffusematerial.h  glassmaterial.h  glossydielectricmaterial.h  plasticmaterial.h  specularmaterial.h
include/nart/patterns/: constantpattern.h  texturepattern.h
input/meshes/: backdrop.geo  cube.geo  monkey.geo  plane.geo  ring.geo  sphere.geo
input/meshes/cameraLens/: aperture.geo  circle.geo  lens.geo  metal.geo  plastic.geo
input/meshes/glassIceWater/: bubbles.geo  glass.geo  iceCube.geo  table.geo  water.geo
input/scenes/: cameraLens.json  cube.json  dragonBunnyGlass.json  glassIceWater.json  glassSphere.json  handVolume.json  macbeth.json  ring.json  veach.json
input/textures/: noise.exr  uv.exr  uvMap.exr
input/textures/cameraLens/: lens_roughness.exr
input/textures/glassIceWater/: glass_roughness.exr  glass_roughness2.exr  glass_roughness3.exr  iceCube_normal.exr  iceCube_roughness.exr
progressPics/: 01.exr  02.exr  03.exr  04.exr  05.exr  06.exr  07.exr  08.exr  09.exr  10.exr  11.exr
python/: obj2geo.py
src/bxdfs/: dielectricbrdf.cpp  lambertbrdf.cpp  specularbrdf.cpp  speculardielectricbrdf.cpp  torrancesparrowbrdf.cpp
src/cameras/: pinholecamera.cpp
src/core/: bvh.cpp  bxdf.cpp  geometry.cpp  main.cpp  media.cpp  memory.cpp  reflection.cpp  render.cpp  sampling.cpp  scene.cpp  util.cpp
src/integrators/: pathintegrator.cpp  volumeintegrator.cpp
src/lights/: disklight.cpp  disklight.h  distantlight.cpp  environmentlight.cpp  ringlight.cpp
src/materials/: diffusematerial.cpp  glassmaterial.cpp  glossydielectricmaterial.cpp  plasticmaterial.cpp  specularmaterial.cpp  specularmaterial.h
src/patterns/: constantpattern.cpp  texturepattern.cpp
